ui element spacing fixes

--- a/asterixdb/asterix-app/src/main/resources/webui/newui/css/master.css
+++ b/asterixdb/asterix-app/src/main/resources/webui/newui/css/master.css
@@ -14,6 +14,7 @@ html,body{
   padding: 25px;
   background-color: #ffffff;
   overflow: hidden;
+  overflow-y: auto;
 }
 .right-container{
   height:100%;
@@ -31,8 +32,7 @@ html,body{
 }
 
 .left-using-container{
-  margin-top: 60px;
-  padding-bottom: 30px;
+  margin-top: 5vh;
 }
 
 .asterix-nav{
@@ -90,7 +90,7 @@ html,body{
 }
 
 .logo {
-  width: 30%;
+  width: 25vh;
 }
 
 .icon-maximize{
@@ -187,11 +187,6 @@ html,body{
   margin-bottom: 10px;
 }
 
-.asterix-tabpage-fixed{
-  overflow-y: scroll;
-  height: 30%;
-}
-
 .asterix-table {
   border-bottom: 3px solid #EEE;
   border-left: 3px solid #EEE;
@@ -210,6 +205,6 @@ html,body{
   box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.2), 0 0px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.asterix-control-group{
-  padding-top: 30px;
+.vh-spacer{
+  margin-top: 35px;
 }
